scripts/trisk_k8s_api/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trisk-api
spec:
  # replicas: 2 # Start with 2 replicas; adjust as necessary
  selector:
    matchLabels:
      app: trisk-api
  template:
    metadata:
      labels:
        app: trisk-api
    spec:
      # nodeSelector:
      #   nodepool: pool-trisk-api
      containers:
      - name: trisk-api
        image: registry.digitalocean.com/theia-1in1000-shinyapps/trisk_api:latest # Replace with your actual image path
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
