scripts/trisk_k8s_api/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trisk-api-service
spec:
  type: LoadBalancer
  selector:
    app: trisk-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
