scripts/trisk_k8s_api/trisk-api-ingress.yaml
# trisk-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trisk-api-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trisk-api-service
            port:
              number: 80
